# agent_eval_at_scale

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: agentcore-identity-and-security.md  guide-to-agent-evaluations.md  references.md
evals/: custom_evaluators.py  run_evals.py  test_cases.py
src/agents/: __init__.py  remediation_agent.py  reporting_agent.py  triage_agent.py
src/runtime/: remediation_runtime.py  reporting_runtime.py  triage_runtime.py
src/tools/: __init__.py  auth.py  github_alerts.py  remediation.py  reporting.py
