[project]
name = "dependabot-alert-analyzer"
version = "0.1.0"
description = "Agents that analyze Dependabot alerts, deployable to AWS Bedrock AgentCore, evaluated for failure modes at scale"
requires-python = ">=3.10"
dependencies = [
    "strands-agents>=0.1.0",
    "strands-agents-evals>=0.1.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
agentcore = [
    "bedrock-agentcore>=0.1.0",
    "bedrock-agentcore-starter-toolkit>=0.1.0",
    "aws-opentelemetry-distro>=0.10.1",
]
